Fixes common styles which caused a scrollbar to appear in the info app.

--- a/common/css/default.css
+++ b/common/css/default.css
@@ -171,11 +171,13 @@ body {
   font-size: 3vh;
   line-height: 4.5vh;
   color: #fff;
+  padding: 5vh;
 }
 
 .credits h1 {
   font-size: 5vh;
-  margin: 5vh 0;
+  margin: 0;
+  margin-bottom: 5vh;
 }
 
 .credits p {
